--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router": "^3.0.5",
     "react-scripts": "1.0.11",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^1.0.0-alpha.4",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,9 +26,10 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "material-ui": "~0.15.0-0",
     "eslint": "^4.4.1",
     "eslint-plugin-react": "^7.2.1",
+    "material-ui": "~0.15.0-0",
+    "redux-devtools": "^3.4.0",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   }
